# deploy_chatbot_python

./: .env.example  .gitignore  .pylintrc  README.md  chatbot.py  client.py  fastapi_main.py  fastapi_test.py  llama_indexing.py  pyproject.toml  pytest.ini  requirements.txt  script.py  server.py
.github/workflows/: ci.yml
app/: callbacks.py  run.py
data/: chatbot_data.txt
deploy_chatbot_python/: __main__.py  launcher.py  logger.py  logger_instance.py
deploy_chatbot_python/api/: run.py  server.py
deploy_chatbot_python/app/: callbacks.py  layout.py  run.py
deploy_chatbot_python/backend/: run.py  server.py
deploy_chatbot_python/chatbot/: __init__.py  index_manager.py  llama_indexer.py  openai_params.py
deploy_chatbot_python/config/: config.yaml  constants.py
deploy_chatbot_python/core/: index_manager.py  llama_indexer.py  openai_params.py
deploy_chatbot_python/frontend/: callbacks.py  layout.py  run.py
deploy_chatbot_python/logging/: logger.py  logger_instance.py
docs/: README.md
src/: __init__.py
src/api/: run.py  server.py
src/app/: callbacks.py  run.py
src/chatbot/: index_manager.py  llama_indexer.py  openai_params.py
src/config/: constants.py
tests/: __init__.py  test_backend.py  test_core_query.py
